--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@ionic-native/splash-screen": "4.8.0",
     "@ionic-native/status-bar": "4.8.0",
     "@ionic/storage": "2.1.3",
+    "angularfire2": "^5.0.0-rc.12",
     "firebase": "^5.4.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "moment": "^2.22.2",
-    "rxjs": "5.5.11",
+    "rxjs": "^6.3.1",
+    "rxjs-compat": "^6.3.1",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
