--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/splash-screen": "4.8.0",
     "@ionic-native/status-bar": "4.8.0",
     "@ionic/storage": "2.1.3",
+    "angular2-counto": "^1.2.5",
     "angularfire2": "^5.0.1",
     "firebase": "^5.4.2",
     "ionic-angular": "3.9.2",
