--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "@ionic/storage": "2.1.3",
     "angular2-counto": "^1.2.5",
     "angularfire2": "^5.0.1",
+    "chart.js": "^2.7.2",
     "firebase": "^5.4.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "moment": "^2.22.2",
-    "rxjs": "^6.3.1",
-    "rxjs-compat": "^6.3.1",
+    "rxjs": "^6.3.2",
+    "rxjs-compat": "^6.3.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
